monitoria/mac323/4-2-33/grades/Adriano-Santin_190818_assignsubmission_file_WordDAG_Adriano.txt
CORREÇÃO MANUAL
[*0] Não fez o que foi proposto no EP. Montar o grafo é parecido demais com o ep passado.

LOG DE COMPILAÇÃO E TESTE
Existem três métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique os 3.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros.

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
CorretorDoVictaum.java:81: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:93: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
Note: Digraph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
=========== TENTANDO COMPILAR DE NOVO (LevelTraversal.java -> WordDAG.java) =============
CorretorDoVictaum.java:81: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:93: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
Note: Digraph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CorretorDoVictaum.java:81: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:93: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
Note: Digraph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
